# sov-upgrade-map

./: .gitignore  README.md
backend/: Cargo.toml  build.sh  go.mod  main.go  tokens.example.json
backend/src/: auth.rs  config.rs  esi.rs  main.rs  models.rs  refresh.rs  routes.rs  state.rs  tokens.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  tsconfig.app.json  tsconfig.node.json
frontend/scripts/: fetch-sde-i18n.mjs  generate-map-data.mjs
frontend/src/: App.tsx  SovUpgradeMap.tsx  i18n.ts  index.css  main.tsx  types.ts  utils.ts
frontend/src/components/: Starmap.tsx
frontend/src/data/: map.generated.ts
frontend/src/locales/: en.json  zh.json
frontend/src/sde/: sde.en.json  sde.zh.json
